Added sonar config to be removed